--- a/src/styles/components/function/header.scss
+++ b/src/styles/components/function/header.scss
@@ -1,8 +1,16 @@
-#header.header {
-  --HeaderHeight: 64px;
-  height: var(--HeaderHeight);
-  .header-left {
-  }
-  .header-right {
+#header {
+  .header {
+    --headerHeight: 64px;
+    height: var(--HeaderHeight);
+    display: flex;
+    .header-left {
+    }
+    .header-right {
+      flex: 1;
+      @apply flex justify-end;
+      .nav-list{
+        @apply flex justify-center items-center;
+      }
+    }
   }
 }
