--- a/src/components/layout/Main/index.scss
+++ b/src/components/layout/Main/index.scss
@@ -1,6 +1,6 @@
 .main-layout {  
   --headerHeight: 64px;
-  --footerHeight: 72px
+  --footerHeight: 72px;
   div {
     box-sizing: border-box;
   }
@@ -9,6 +9,14 @@
       height: var(--headerHeight);
       @apply flex justify-between items-center;
       .header-left {
+        height: 100%;
+        .logo {
+          height: 100%;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
       }
       .header-right {
         flex: 1;
@@ -22,7 +30,7 @@
   }
 
   #content {
-    min-height: calc(100vh - var(--headerHeight));
+    min-height: calc(100vh - var(--headerHeight) - var(--footerHeight));
   }
 
   #footer {
