--- a/src/styles/components/common/link.module.scss
+++ b/src/styles/components/common/link.module.scss
@@ -1,3 +1,35 @@
 .comp-link {
-  
+  color: black;
+  gap: 4px;
+  @apply flex items-center justify-center text-sm font-medium;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .link-icon {
+    &-preffix {
+    }
+    &-suffix {
+    }
+  }
+
+  .link-content {
+  }
+
+  &.link-type__text {
+    &:hover {
+      @apply text-primary;
+      a {
+        text-decoration: underline;
+        text-underline-offset: 6px;
+        text-decoration-thickness: 1px;
+      }
+    }
+  }
+
+  &.link-type__button {
+
+  }
 }
