--- a/src/components/common/Container/index.module.scss
+++ b/src/components/common/Container/index.module.scss
@@ -1,19 +1,18 @@
-.comp-container {
+.Container {
   width: 100%;
 
-  &.container-type__page {
+  &.ContainerTypePage {
     min-height: 100vh;
   }
 
-  &.container-type__block {
+  &.ContainerTypeBlock {
     height: 100%;
   }
 
-  &.container-type__section {
+  &.ContainerTypeSection {
     margin: 0 auto;
     padding: 0;
-    @apply 
-      sm:p-[1rem]
+    @apply sm:p-[1rem]
       lg:max-w-[1440px] p-0
       md:max-w-[1230px] p-0;
   }
