🌈 style(ui): add the materila design css varibale

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,11 +1,318 @@
-:root[data-theme-mode='light'] {
-  @import-json "../styles/token/palette/light.json";
+:root[data-theme='light'] {
+  --abbes-sys-color-primary: rgb(39 60 3);
+  --abbes-sys-color-surface-tint: rgb(78 102 41);
+  --abbes-sys-color-on-primary: rgb(255 255 255);
+  --abbes-sys-color-primary-container: rgb(93 117 54);
+  --abbes-sys-color-on-primary-container: rgb(255 255 255);
+  --abbes-sys-color-secondary: rgb(49 57 35);
+  --abbes-sys-color-on-secondary: rgb(255 255 255);
+  --abbes-sys-color-secondary-container: rgb(103 112 86);
+  --abbes-sys-color-on-secondary-container: rgb(255 255 255);
+  --abbes-sys-color-tertiary: rgb(9 61 57);
+  --abbes-sys-color-on-tertiary: rgb(255 255 255);
+  --abbes-sys-color-tertiary-container: rgb(72 117 112);
+  --abbes-sys-color-on-tertiary-container: rgb(255 255 255);
+  --abbes-sys-color-error: rgb(116 0 6);
+  --abbes-sys-color-on-error: rgb(255 255 255);
+  --abbes-sys-color-error-container: rgb(207 44 39);
+  --abbes-sys-color-on-error-container: rgb(255 255 255);
+  --abbes-sys-color-background: rgb(250 250 238);
+  --abbes-sys-color-on-background: rgb(26 28 22);
+  --abbes-sys-color-surface: rgb(250 250 238);
+  --abbes-sys-color-on-surface: rgb(16 18 12);
+  --abbes-sys-color-surface-variant: rgb(225 228 213);
+  --abbes-sys-color-on-surface-variant: rgb(52 55 45);
+  --abbes-sys-color-outline: rgb(80 84 72);
+  --abbes-sys-color-outline-variant: rgb(107 110 98);
+  --abbes-sys-color-shadow: rgb(0 0 0);
+  --abbes-sys-color-scrim: rgb(0 0 0);
+  --abbes-sys-color-inverse-surface: rgb(47 49 42);
+  --abbes-sys-color-inverse-on-surface: rgb(241 242 230);
+  --abbes-sys-color-inverse-primary: rgb(180 208 135);
+  --abbes-sys-color-primary-fixed: rgb(93 117 54);
+  --abbes-sys-color-on-primary-fixed: rgb(255 255 255);
+  --abbes-sys-color-primary-fixed-dim: rgb(69 92 32);
+  --abbes-sys-color-on-primary-fixed-variant: rgb(255 255 255);
+  --abbes-sys-color-secondary-fixed: rgb(103 112 86);
+  --abbes-sys-color-on-secondary-fixed: rgb(255 255 255);
+  --abbes-sys-color-secondary-fixed-dim: rgb(79 88 63);
+  --abbes-sys-color-on-secondary-fixed-variant: rgb(255 255 255);
+  --abbes-sys-color-tertiary-fixed: rgb(72 117 112);
+  --abbes-sys-color-on-tertiary-fixed: rgb(255 255 255);
+  --abbes-sys-color-tertiary-fixed-dim: rgb(46 92 88);
+  --abbes-sys-color-on-tertiary-fixed-variant: rgb(255 255 255);
+  --abbes-sys-color-surface-dim: rgb(198 199 188);
+  --abbes-sys-color-surface-bright: rgb(250 250 238);
+  --abbes-sys-color-surface-container-lowest: rgb(255 255 255);
+  --abbes-sys-color-surface-container-low: rgb(244 244 233);
+  --abbes-sys-color-surface-container: rgb(232 233 221);
+  --abbes-sys-color-surface-container-high: rgb(221 222 210);
+  --abbes-sys-color-surface-container-highest: rgb(209 210 199);
+
+  --abbes-sys-color-info: rgb(0 56 98);
+  --abbes-sys-color-on-info: rgb(255 255 255);
+  --abbes-sys-color-info-container: rgb(70 112 158);
+  --abbes-sys-color-on-info-container: rgb(255 255 255);
+  --abbes-sys-color-warning: rgb(82 45 0);
+  --abbes-sys-color-on-warning: rgb(255 255 255);
+  --abbes-sys-color-warning-container: rgb(151 97 38);
+  --abbes-sys-color-on-warning-container: rgb(255 255 255);
+  --abbes-sys-color-success: rgb(17 63 21);
+  --abbes-sys-color-on-success: rgb(255 255 255);
+  --abbes-sys-color-success-container: rgb(74 120 71);
+  --abbes-sys-color-on-success-container: rgb(255 255 255);
 }
 
-:root[data-theme-mode='dark'] {
-  @import-json "../styles/token/palette/light.json";
+:root[data-theme='dark'] {
+  --abbes-sys-color-primary: rgb(202 230 155);
+  --abbes-sys-color-surface-tint: rgb(180 208 135);
+  --abbes-sys-color-on-primary: rgb(26 42 0);
+  --abbes-sys-color-primary-container: rgb(127 153 86);
+  --abbes-sys-color-on-primary-container: rgb(0 0 0);
+  --abbes-sys-color-secondary: rgb(214 224 193);
+  --abbes-sys-color-on-secondary: rgb(32 40 20);
+  --abbes-sys-color-secondary-container: rgb(139 148 120);
+  --abbes-sys-color-on-secondary-container: rgb(0 0 0);
+  --abbes-sys-color-tertiary: rgb(182 230 224);
+  --abbes-sys-color-on-tertiary: rgb(0 43 40);
+  --abbes-sys-color-tertiary-container: rgb(107 153 148);
+  --abbes-sys-color-on-tertiary-container: rgb(0 0 0);
+  --abbes-sys-color-error: rgb(255 210 204);
+  --abbes-sys-color-on-error: rgb(84 0 3);
+  --abbes-sys-color-error-container: rgb(255 84 73);
+  --abbes-sys-color-on-error-container: rgb(0 0 0);
+  --abbes-sys-color-background: rgb(18 20 14);
+  --abbes-sys-color-on-background: rgb(226 227 216);
+  --abbes-sys-color-surface: rgb(18 20 14);
+  --abbes-sys-color-on-surface: rgb(255 255 255);
+  --abbes-sys-color-surface-variant: rgb(69 72 61);
+  --abbes-sys-color-on-surface-variant: rgb(219 222 207);
+  --abbes-sys-color-outline: rgb(176 179 165);
+  --abbes-sys-color-outline-variant: rgb(143 146 132);
+  --abbes-sys-color-shadow: rgb(0 0 0);
+  --abbes-sys-color-scrim: rgb(0 0 0);
+  --abbes-sys-color-inverse-surface: rgb(226 227 216);
+  --abbes-sys-color-inverse-on-surface: rgb(41 43 35);
+  --abbes-sys-color-inverse-primary: rgb(56 79 20);
+  --abbes-sys-color-primary-fixed: rgb(208 237 161);
+  --abbes-sys-color-on-primary-fixed: rgb(10 20 0);
+  --abbes-sys-color-primary-fixed-dim: rgb(180 208 135);
+  --abbes-sys-color-on-primary-fixed-variant: rgb(39 60 3);
+  --abbes-sys-color-secondary-fixed: rgb(221 231 198);
+  --abbes-sys-color-on-secondary-fixed: rgb(12 19 3);
+  --abbes-sys-color-secondary-fixed-dim: rgb(193 202 172);
+  --abbes-sys-color-on-secondary-fixed-variant: rgb(49 57 35);
+  --abbes-sys-color-tertiary-fixed: rgb(188 236 230);
+  --abbes-sys-color-on-tertiary-fixed: rgb(0 20 19);
+  --abbes-sys-color-tertiary-fixed-dim: rgb(160 208 202);
+  --abbes-sys-color-on-tertiary-fixed-variant: rgb(9 61 57);
+  --abbes-sys-color-surface-dim: rgb(18 20 14);
+  --abbes-sys-color-surface-bright: rgb(67 69 61);
+  --abbes-sys-color-surface-container-lowest: rgb(6 8 4);
+  --abbes-sys-color-surface-container-low: rgb(28 30 23);
+  --abbes-sys-color-surface-container: rgb(38 41 33);
+  --abbes-sys-color-surface-container-high: rgb(49 51 44);
+  --abbes-sys-color-surface-container-highest: rgb(60 63 55);
+
+  --abbes-sys-color-info: rgb(198 222 255);
+  --abbes-sys-color-on-info: rgb(0 39 70);
+  --abbes-sys-color-info-container: rgb(106 148 196);
+  --abbes-sys-color-on-info-container: rgb(0 0 0);
+  --abbes-sys-color-warning: rgb(255 213 174);
+  --abbes-sys-color-on-warning: rgb(59 31 0);
+  --abbes-sys-color-warning-container: rgb(192 132 70);
+  --abbes-sys-color-on-warning-container: rgb(0 0 0);
+  --abbes-sys-color-success: rgb(182 234 174);
+  --abbes-sys-color-on-success: rgb(0 45 6);
+  --abbes-sys-color-success-container: rgb(108 156 104);
+  --abbes-sys-color-on-success-container: rgb(0 0 0);
 }
 
 :root {
-  @import-json "../styles/token/other/other.json";
+  --abbes-sys-font-size-xxl: 2.125rem;
+  --abbes-sys-font-size-xl: 1.5rem;
+  --abbes-sys-font-size-lg: 1.25rem;
+  --abbes-sys-font-size-md: 1rem;
+  --abbes-sys-font-size-sm: 0.875rem;
+  --abbes-sys-font-size-xs: 0.75rem;
+  --abbes-sys-font-size-xxs: 0.625re;
+
+  --abbes-sys-radius-hf: 50%;
+  --abbes-sys-radius-rd: 999px;
+  --abbes-sys-radius-xxl: 2rem;
+  --abbes-sys-radius-xl: 1.5rem;
+  --abbes-sys-radius-lg: 1.25rem;
+  --abbes-sys-radius-md: 1rem;
+  --abbes-sys-radius-sm: 0.75rem;
+  --abbes-sys-radius-xs: 0.5rem;
+  --abbes-sys-radius-xxs: 0.25rem;
+
+  --abbes-sys-space-xxl: 2rem;
+  --abbes-sys-space-xl: 1.5rem;
+  --abbes-sys-space-lg: 1.25rem;
+  --abbes-sys-space-md: 1rem;
+  --abbes-sys-space-sm: 0.75rem;
+  --abbes-sys-space-xs: 0.5rem;
+  --abbes-sys-space-xxs: 0.25rem;
+
+  --abbes-sys-font-weight-sm: 300;
+  --abbes-sys-font-weight-md: 400;
+  --abbes-sys-font-weight-lg: 500;
+  --abbes-sys-font-weight-xl: 700;
+
+}
+
+:root {
+  --abbes-sys-palette-primary-0: #000000;
+  --abbes-sys-palette-primary-5: #0F1209;
+  --abbes-sys-palette-primary-10: #191D13;
+  --abbes-sys-palette-primary-15: #23271C;
+  --abbes-sys-palette-primary-20: #2E3227;
+  --abbes-sys-palette-primary-25: #393D31;
+  --abbes-sys-palette-primary-30: #44483C;
+  --abbes-sys-palette-primary-35: #505447;
+  --abbes-sys-palette-primary-40: #5C6053;
+  --abbes-sys-palette-primary-50: #75796B;
+  --abbes-sys-palette-primary-60: #8F9284;
+  --abbes-sys-palette-primary-70: #A9AD9E;
+  --abbes-sys-palette-primary-80: #C5C8B8;
+  --abbes-sys-palette-primary-90: #E1E4D3;
+  --abbes-sys-palette-primary-95: #EFF2E1;
+  --abbes-sys-palette-primary-98: #F8FBEA;
+  --abbes-sys-palette-primary-99: #FBFEED;
+  --abbes-sys-palette-primary-100: #FFFFFF;
+
+  --abbes-sys-palette-secondary-0: #000000;
+  --abbes-sys-palette-secondary-5: #10110E;
+  --abbes-sys-palette-secondary-10: #1B1C19;
+  --abbes-sys-palette-secondary-15: #252623;
+  --abbes-sys-palette-secondary-20: #30312D;
+  --abbes-sys-palette-secondary-25: #3B3C38;
+  --abbes-sys-palette-secondary-30: #474743;
+  --abbes-sys-palette-secondary-35: #53534F;
+  --abbes-sys-palette-secondary-40: #5F5F5A;
+  --abbes-sys-palette-secondary-50: #787773;
+  --abbes-sys-palette-secondary-60: #91918C;
+  --abbes-sys-palette-secondary-70: #ACABA6;
+  --abbes-sys-palette-secondary-80: #C8C6C1;
+  --abbes-sys-palette-secondary-90: #E4E2DD;
+  --abbes-sys-palette-secondary-95: #F3F1EB;
+  --abbes-sys-palette-secondary-98: #FBF9F3;
+  --abbes-sys-palette-secondary-99: #FEFCF6;
+  --abbes-sys-palette-secondary-100: #FFFFFF;
+
+  --abbes-sys-palette-tertiary-0: #000000;
+  --abbes-sys-palette-tertiary-5: #0E1211;
+  --abbes-sys-palette-tertiary-10: #181C1C;
+  --abbes-sys-palette-tertiary-15: #222726;
+  --abbes-sys-palette-tertiary-20: #2D3130;
+  --abbes-sys-palette-tertiary-25: #383C3B;
+  --abbes-sys-palette-tertiary-30: #434847;
+  --abbes-sys-palette-tertiary-35: #4F5352;
+  --abbes-sys-palette-tertiary-40: #5B5F5E;
+  --abbes-sys-palette-tertiary-50: #747877;
+  --abbes-sys-palette-tertiary-60: #8E9190;
+  --abbes-sys-palette-tertiary-70: #A8ACAB;
+  --abbes-sys-palette-tertiary-80: #C4C7C6;
+  --abbes-sys-palette-tertiary-90: #E0E3E2;
+  --abbes-sys-palette-tertiary-95: #EEF1F0;
+  --abbes-sys-palette-tertiary-98: #F7FAF8;
+  --abbes-sys-palette-tertiary-99: #FAFDFB;
+  --abbes-sys-palette-tertiary-100: #FFFFFF;
+
+  --abbes-sys-palette-neutral-0: #000000;
+  --abbes-sys-palette-neutral-5: #111110;
+  --abbes-sys-palette-neutral-10: #1C1B1B;
+  --abbes-sys-palette-neutral-15: #262625;
+  --abbes-sys-palette-neutral-20: #31302F;
+  --abbes-sys-palette-neutral-25: #3C3B3A;
+  --abbes-sys-palette-neutral-30: #484645;
+  --abbes-sys-palette-neutral-35: #535251;
+  --abbes-sys-palette-neutral-40: #5F5E5D;
+  --abbes-sys-palette-neutral-50: #787775;
+  --abbes-sys-palette-neutral-60: #92908F;
+  --abbes-sys-palette-neutral-70: #ADABA9;
+  --abbes-sys-palette-neutral-80: #C9C6C4;
+  --abbes-sys-palette-neutral-90: #E5E2E0;
+  --abbes-sys-palette-neutral-95: #F4F0EE;
+  --abbes-sys-palette-neutral-98: #FCF9F7;
+  --abbes-sys-palette-neutral-99: #F9FFE7;
+  --abbes-sys-palette-neutral-100: #FFFFFF;
+
+  --abbes-sys-palette-neutral-variant-0: #000000;
+  --abbes-sys-palette-neutral-variant-5: #111110;
+  --abbes-sys-palette-neutral-variant-10: #1C1C1A;
+  --abbes-sys-palette-neutral-variant-15: #262624;
+  --abbes-sys-palette-neutral-variant-20: #31302F;
+  --abbes-sys-palette-neutral-variant-25: #3C3B39;
+  --abbes-sys-palette-neutral-variant-30: #474745;
+  --abbes-sys-palette-neutral-variant-35: #535250;
+  --abbes-sys-palette-neutral-variant-40: #5F5E5C;
+  --abbes-sys-palette-neutral-variant-50: #787775;
+  --abbes-sys-palette-neutral-variant-60: #92908E;
+  --abbes-sys-palette-neutral-variant-70: #ADABA8;
+  --abbes-sys-palette-neutral-variant-80: #C9C6C3;
+  --abbes-sys-palette-neutral-variant-90: #E5E2DF;
+  --abbes-sys-palette-neutral-variant-95: #F3F0ED;
+  --abbes-sys-palette-neutral-variant-98: #FCF9F6;
+  --abbes-sys-palette-neutral-variant-99: #FFFCF9;
+  --abbes-sys-palette-neutral-variant-100: #FFFFFF;
+
+  --abbes-sys-palette-success-0: #000000;
+  --abbes-sys-palette-success-5: #001506;
+  --abbes-sys-palette-success-10: #00210c;
+  --abbes-sys-palette-success-15: #002d12;
+  --abbes-sys-palette-success-20: #003918;
+  --abbes-sys-palette-success-25: #00451f;
+  --abbes-sys-palette-success-30: #005226;
+  --abbes-sys-palette-success-35: #00602d;
+  --abbes-sys-palette-success-40: #006d35;
+  --abbes-sys-palette-success-50: #008944;
+  --abbes-sys-palette-success-60: #00a754;
+  --abbes-sys-palette-success-70: #2bc369;
+  --abbes-sys-palette-success-80: #51e082;
+  --abbes-sys-palette-success-90: #70fd9b;
+  --abbes-sys-palette-success-95: #c4ffcc;
+  --abbes-sys-palette-success-98: #eaffe9;
+  --abbes-sys-palette-success-99: #f5fff2;
+  --abbes-sys-palette-success-100: #FFFFFF;
+
+  --abbes-sys-palette-info-0: #000000;
+  --abbes-sys-palette-info-5: #001225;
+  --abbes-sys-palette-info-10: #001d36;
+  --abbes-sys-palette-info-15: #002747;
+  --abbes-sys-palette-info-20: #003258;
+  --abbes-sys-palette-info-25: #003d6a;
+  --abbes-sys-palette-info-30: #00497d;
+  --abbes-sys-palette-info-35: #005590;
+  --abbes-sys-palette-info-40: #0061a4;
+  --abbes-sys-palette-info-50: #007bcc;
+  --abbes-sys-palette-info-60: #1e95f2;
+  --abbes-sys-palette-info-70: #63b0ff;
+  --abbes-sys-palette-info-80: #9ecaff;
+  --abbes-sys-palette-info-90: #d1e4ff;
+  --abbes-sys-palette-info-95: #eaf1ff;
+  --abbes-sys-palette-info-98: #f8f9ff;
+  --abbes-sys-palette-info-99: #fdfcff;
+  --abbes-sys-palette-info-100: #ffffff;
+
+  --abbes-sys-palette-warning-0: #000000;
+  --abbes-sys-palette-warning-5: #1d0d00;
+  --abbes-sys-palette-warning-10: #2c1600;
+  --abbes-sys-palette-warning-15: #3b1f00;
+  --abbes-sys-palette-warning-20: #4a2800;
+  --abbes-sys-palette-warning-25: #593200;
+  --abbes-sys-palette-warning-30: #693c00;
+  --abbes-sys-palette-warning-35: #7a4600;
+  --abbes-sys-palette-warning-40: #8b5000;
+  --abbes-sys-palette-warning-50: #ae6600;
+  --abbes-sys-palette-warning-60: #d27c00;
+  --abbes-sys-palette-warning-70: #f79300;
+  --abbes-sys-palette-warning-80: #ffb870;
+  --abbes-sys-palette-warning-90: #ffdcbe;
+  --abbes-sys-palette-warning-95: #ffeee1;
+  --abbes-sys-palette-warning-98: #fff8f5;
+  --abbes-sys-palette-warning-99: #fffbff;
+  --abbes-sys-palette-warning-100: #ffffff;
+
 }
